Update solutions.